--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 </head>
   <body class="bg-brand-light font-sans">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
