--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
@@ -37,8 +38,7 @@
 }
 </script>
 </head>
-  <body class="bg-brand-light font-sans">
+  <body class="bg-brand-light dark:bg-brand-dark font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
