--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 </head>
   <body class="bg-brand-light dark:bg-brand-dark font-sans">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
